# md-eng

./: pyproject.toml
aulas/01-intro/: Aula01 - Insper Autograding - eng.ipynb
aulas/02-select/: Aula_02.ipynb
aulas/05-experimento-ddl/: Aula05_coemu.ipynb
aulas/06-dml/: Aula_06.ipynb
aulas/07-select-join/: Aula_07.ipynb
aulas/07-select-join/sql/: exemplos.sql
